# RAG_practice

./: .gitignore  README.md  noxfile.py  pyproject.toml
src/: chunking.py  embedding.py  retrieval.py
supporting_files/: generated_chunks.json  generated_chunks_index.faiss
tools/: chunking.py  embedding_builder.py  retriever_builder.py
