[project]
name = "rag-practice"
version = "0.1.0"
description = "RAG practice project for PDF chunking, embedding, and retrieval."
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
    "faiss-cpu>=1.14.3",
    "numpy>=2.0.0",
    "pdfplumber>=0.11.10",
    "sentence-transformers>=5.6.0",
]

[project.urls]
repository = "https://github.com/leonardonery626/RAG_practice"

# Define here (if any) the console cmd to launch your application
[project.scripts]
run_local_server = "pilot_rag.orchestrator.run:start_orchestrator"
create_collections = "pilot_rag.ai_search:create_collections"
delete_collection = "pilot_rag.ai_search:delete_collection"
clean_deploy = "pilot_rag.ai_search:clean_deploy"
rag_create_dataset = "pilot_rag.evaluation.datasets:create_dataset"
rag_evaluate = "pilot_rag.evaluation.experiments:run_evaluation"

# -----------------------------------------------
# Dependencies management
# -----------------------------------------------
[dependency-groups]
dev = [
    "nox[uv]>=2025.5.1",
    "pre-commit==4.5.1",
    "pip-system-certs>=5.2,<6" # Required to use installed certificates for LLMApim ssl requests
]
format = ["ruff>=0.14.1,<0.15"]
lint = [
    "ruff>=0.14.1,<0.15",
    "junit2html>=31.0.3,<32",
    "hadolint-py @ git+https://git@github.com/AleksaC/hadolint-py@v2.14.0",
]
typing = [
    "mypy>=1.8,<2",
    "typing-extensions>=4.9.0,<5",
    "types-setuptools>=68.0",
]
test = [
    "pytest>=8.0.0,<9",
    "pytest-html>=4.1.1,<5",
    "coverage[toml]>=7.3.2,<8",
    "pytest-mock>=3.12.0,<4",
    "pytest-retry>=1.6.2,<2",
    "pytest-order>=1.3.0,<2",
    "freezegun>=1.4.0,<2"
]